<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Home">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green">
        <TextView
            android:id="@+id/welcome_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:gravity="center"/>
    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:onClick="logout"
        android:layout_marginLeft="290dp"
        android:textSize="15dp"
        android:backgroundTint="@color/white"
        android:text="@string/log_out"
        android:textColor="@color/green" />

    <Button
        android:id="@+id/active_sche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="90dp"
        android:backgroundTint="@color/white"
        android:text="@string/no_started_schedule"
        android:textColor="@color/green" />

    <Button
        android:id="@+id/minuter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="140dp"
        android:textSize="30dp"
        android:backgroundTint="@color/white"
        android:text="@string/start_time"
        android:textColor="@color/green" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="280dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="100dp">

            <ImageButton
                android:id="@+id/clockin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:onClick="launchClockIn"
                app:srcCompat="@drawable/clockin"/>

<!--            android:insetLeft="20dp"-->
<!--            android:insetTop="20dp"-->
<!--            android:insetRight="20dp"-->
<!--            android:insetBottom="20dp"-->
<!--            app:backgroundTint="#F0F0F0"-->
<!--            android:foreground="@drawable/rounded_button"-->
<!--            android:background="@drawable/rounded_button"-->
<!--            android:drawableRight="@android:drawable/ic_delete"-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clock_in"
                android:textSize="20dp"
                android:textColor="@color/green"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="60dp">

            <ImageButton
                android:id="@+id/clockout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:srcCompat="@drawable/clockout"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clock_out"
                android:textSize="20dp"
                android:textColor="#B00020"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="450dp"
        android:layout_marginLeft="32dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
           android:layout_gravity="center"
            android:layout_marginRight="13dp">

            <ImageButton
                android:id="@+id/report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:onClick="launchReported"
                app:srcCompat="@drawable/report"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report"
                android:textSize="20dp"
                android:textColor="#B00020"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <ImageButton
                android:id="@+id/schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:onClick="launchAddSchedule"
                app:srcCompat="@drawable/schedule"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule"
                android:textSize="20dp"
                android:textColor="@color/green"
                android:layout_marginTop="1dp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp">

            <ImageButton
                android:id="@+id/setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:srcCompat="@drawable/setting"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:textSize="20dp"
                android:textColor="#2962FF"
                android:layout_marginTop="-5dp"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>