<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportedSchedule"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green">

        <ImageButton
            android:id="@+id/backarrow"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:onClick="backarrow"
            android:background="@drawable/back_button" />

        <TextView
            android:id="@+id/schedulereported"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reported_schedule"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:gravity="center"/>
    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/save_report"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/round"
        app:backgroundTint="@color/green"
        android:backgroundTint="@color/green"
        android:text="@string/add"
        android:gravity="center"
        android:textSize="25dp"
        android:onClick="LaunchReportSchedule"
        android:layout_marginLeft="340dp"
        android:textColor="@color/white" />
<!--    android:visibility="invisible"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="70dp">

        <TextView
            android:id="@+id/amountreported"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/empty"
            android:textSize="25dp"
            android:gravity="center"/>
        <ListView
            android:id="@+id/schedulereportedlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"/>
    </LinearLayout>

</RelativeLayout>