<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSchedule">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green">

        <ImageButton
            android:id="@+id/backarrow"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:onClick="backarrow"
            android:background="@drawable/back_button" />

        <TextView
            android:id="@+id/scheduletitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:gravity="center"/>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/infos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_infos"
        android:textColor="@color/black"
        android:layout_marginTop="100dp"
        android:textSize="20dp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/sname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Schedule name"/>

        <EditText
            android:id="@+id/expected_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="datetime"
            android:hint="Expected Start Date"/>
        <EditText
            android:id="@+id/expected_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="datetime"
            android:hint="Expected End Date"/>

        <EditText
            android:id="@+id/note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Note"/>
        <Button
            android:id="@+id/save_sche"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="@string/save_schedule"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/amountofschedulesaved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:gravity="center"/>

        <ListView
            android:id="@+id/schedulesave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"/>
    </LinearLayout>

</RelativeLayout>